# dmxparser

./: Cargo.toml  README.md
benches/: reader.rs
src/: dmx.rs  lib.rs  read.rs  serde.rs
src/formats/: mod.rs  vmap.rs
tests/: reader.rs
tests/fixtures/: test.vmap
